--- a/struktura.html
+++ b/struktura.html
@@ -38,7 +38,7 @@
                 <label><input type="checkbox"> Remember me</label>
                 <a href="#">Forgot Password?</a>
             </div>
-            <button type="submit">Log In</button>
+            <button type="submit"><span></span>Log In</button>
             <div class="register-link">
                 <p>Don't have an account? <a href="#">Register</a></p>
             </div>
